--- a/src/app/chameleon-reports/diabetes-consultation/lab-results-detail-dialog/lab-results-detail-dialog.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/lab-results-detail-dialog/lab-results-detail-dialog.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title>תוצאות מעבדה עבור המטופל</h2>
-<mat-dialog-content>
+<!-- <h2 mat-dialog-title>תוצאות מעבדה עבור המטופל</h2> -->
+<mat-dialog-content dir="rtl">
   <ng-container *ngIf="!loading; else loadingSpinner">
     <table mat-table [dataSource]="labResults" class="mat-elevation-z8">
 
