--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.scss
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.scss
@@ -264,6 +264,7 @@
 .gauge-section {
     margin-top: 0; /* REMOVE top space above gauges */
     padding-top: 5px; /* Tiny breathing room */
+    padding-bottom: 5px;
 }
 
 .gauge-row {
