--- a/src/app/chameleon-reports/diabetes-consultation/lab-results-detail-dialog/lab-results-detail-dialog.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/lab-results-detail-dialog/lab-results-detail-dialog.component.html
@@ -28,8 +28,14 @@
         <td mat-cell *matCellDef="let element">{{ element.ResultDate | date:'short' }}</td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['TestDate', 'Sender_Name', 'TestName', 'Result', 'ResultDate']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['TestDate', 'Sender_Name', 'TestName', 'Result', 'ResultDate']"></tr>
+      <tr mat-row 
+      *matRowDef="let row; columns: ['TestDate', 'Sender_Name', 'TestName', 'Result', 'ResultDate']"
+      [ngClass]="{
+          'high-sugar': row.Result >= 180, 
+          'low-sugar': row.Result < 70, 
+          'normal-range': row.Result >= 70 && row.Result < 180
+      }">
+  </tr>
     </table>
   </ng-container>
 
