--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -7,7 +7,7 @@
       {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ NullReleaseDateCount }}   מאושפזי עבר   {{ NonNullReleaseDateCount }}</span>
 
     </h1>
-
+    <div class="shared-container">
     <div class="filter-card-container">
         <div class="filter-card">
           <div dir="rtl" class="card mat-elevation-z8">
@@ -98,7 +98,34 @@ class="custom-toggle-group"
           </div>
         </div>
       </mat-card> -->
+<!-- Gauge for ICD9 WITH Diabetic Estimation -->
+<mat-card class="gauge-card">
+  <div class="gauge-title">
+    מאובחנים עם אומדן
+    <span
+      matTooltip="מונה: מטופלים עם אבחנת ICD9 שיש להם גם אומדן סוכרת | מכנה: סך מטופלים עם אבחנת סכרת ב-ICD9"
+      matTooltipPosition="above"
+      style="cursor: pointer; font-size: 16px; margin-left: 5px;"
+    >
+      <mat-icon style="color: #007BFF;">help_outline</mat-icon>
+    </span>
+  </div>
 
+  <div class="gauge-content">
+    <ngx-gauge
+      [value]="icd9WithEstimationPercentage"
+      [min]="0"
+      [max]="100"
+      [label]="''"
+      [append]="'%'"
+      [foregroundColor]="'#9b59b6'">
+    </ngx-gauge>
+    <div class="gauge-info">
+      סה"כ מטופלים: <strong>{{ PatientWithICD9AndHaveDiabetesEstimationDataSource.data.length }}</strong>
+      מתוך <strong>{{ DiagnosisICD9dataSource.data.length }}</strong>
+    </div>
+  </div>
+</mat-card>
       <!-- ICD9 Percentage Card -->
       <mat-card class="gauge-card">
         <div class="gauge-title"> אחוז מטופלים עם סוכרת  <span 
@@ -242,8 +269,8 @@ class="custom-toggle-group"
       [foregroundColor]="'#3498db'"
     ></ngx-gauge>
     <div class="gauge-info">
-      סה"כ מטופלים: <strong>{{ sugerAbove180.data.length}}</strong>
-      מתוך <strong>{{ dataSourceBelow70.data.length }}</strong>
+      סה"כ מטופלים: <strong>{{ dataSourceBelow70.data.length }}</strong>
+      מתוך <strong>{{ sugerAbove180.data.length}}</strong>
     </div>
   </div>
 </mat-card>
@@ -269,8 +296,8 @@ class="custom-toggle-group"
     </ngx-gauge>
     <div class="gauge-info">
     
-      סה"כ מטופלים: <strong>{{ DiagnosisICD9dataSource.data.length }}</strong>
-      מתוך <strong>{{ PatientWithICD9AndDontHaveDiabetesEstimationDataSource.data.length }}</strong>
+      סה"כ מטופלים: <strong>{{ PatientWithICD9AndDontHaveDiabetesEstimationDataSource.data.length }}</strong>
+      מתוך <strong>{{ DiagnosisICD9dataSource.data.length }}</strong>
     </div>
   </div>
   
@@ -283,12 +310,58 @@ class="custom-toggle-group"
   </div>
 
   <!-- Table Section -->
+  <div class="table-section">
   <div
     class="mat-table-container"
     dir="rtl"
     style="overflow-x: hidden; overflow-y: hidden; display: inline-grid"
   >
     <mat-tab-group >
+      <mat-tab label="ICD9 עם אומדן סוכרת">
+        <table mat-table [dataSource]="PatientWithICD9AndHaveDiabetesEstimationDataSource" class="mat-elevation-z8" matSort style="table-layout: fixed; width: 100%">
+      
+          <ng-container matColumnDef="Admission_No">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
+            <td mat-cell *matCellDef="let element">{{ element.Admission_No }}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="Admission_Date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
+            <td mat-cell *matCellDef="let element">{{ element.Admission_Date | date }}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="First_Name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>שם פרטי</th>
+            <td mat-cell *matCellDef="let element">{{ element.First_Name }}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="Last_Name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>שם משפחה</th>
+            <td mat-cell *matCellDef="let element">{{ element.Last_Name }}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="Admission_Medical_Record">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר תיק קבלה</th>
+            <td mat-cell *matCellDef="let element">{{ element.Admission_Medical_Record }}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="UnitName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>מחלקה</th>
+            <td mat-cell *matCellDef="let element">{{ element.UnitName }}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="Release_Date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך שחרור</th>
+            <td mat-cell *matCellDef="let element">{{ element.Release_Date | date }}</td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsPatientWithICD9AndDontHaveDiabetesEstimation"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsPatientWithICD9AndDontHaveDiabetesEstimation;"></tr>
+        </table>
+      
+        <mat-paginator #paginatorICD9HaveEstimation [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        >
+      </mat-tab>
       <!-- First Tab -->
       <mat-tab label="ICD9 ללא אומדן סכרת">
         <table mat-table [dataSource]="PatientWithICD9AndDontHaveDiabetesEstimationDataSource"  class="mat-elevation-z8"
@@ -994,4 +1067,6 @@ class="custom-toggle-group"
       
     </mat-tab-group>
   </div>
+</div>
+</div>
 </div>
