--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.scss
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.scss
@@ -353,7 +353,7 @@
     margin: 0 auto; /* center both gauge-row and table */
   }
   mat-tab-group {
-    width: 95%; /* Keep consistent width with the table */
+    //width: 95%; /* Keep consistent width with the table */
     margin: 0 auto; /* Center the tab group horizontally */
     border: 2px solid #ccc; /* Add a border */
     border-radius: 8px; /* Optional: Add rounded corners */
