--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -807,7 +807,7 @@ class="custom-toggle-group"
       <mat-tab label="">
         <ng-template mat-tab-label>
           <span matTooltip="" matTooltipPosition="above">
-            Hemoglobin A1C Results
+            A1C 
           </span>
         </ng-template>
         <table
@@ -1002,7 +1002,7 @@ class="custom-toggle-group"
         </mat-paginator>
       </mat-tab>
       
-      <mat-tab label="מטופלים סוכרתיים עם קטטר והוראה 14615">
+      <mat-tab label="מטופלים סוכרתיים עם קטטר ">
         <table mat-table [dataSource]="DiabeticPatientsWithCatheterOrdersDataSource" matSort class="mat-elevation-z8"  style="table-layout: fixed; width: 100% " >
       
           <ng-container matColumnDef="Admission_No">
