--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -87,7 +87,7 @@
       <!-- Total Mobility Score Gauge -->
       <!-- Total Mobility Score Gauge -->
 <div class="gauge-item">
-  <div class="gauge-title">פילוח מחלקתי - ציון מסכם</div>
+  <div class="gauge-title">הליכה בפועל </div>
   <ngx-gauge
     [value]="gaugeValue"
     [min]="0"
