--- a/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
+++ b/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
@@ -45,6 +45,85 @@
       </table>
     </mat-card-content>
   </mat-card>
+  <h2 class="table-title">10. סיקור דליריום וטיפול בו לפי מין וגיל</h2>
 
+  <table mat-table [dataSource]="genderAgeSummary" class="mat-elevation-z8" dir="rtl">
+  
+    <!-- Grouped Header Row -->
+    <ng-container matColumnDef="groupedHeader1">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1" class="group-header"> אוכלוסיית מאושפזים </th>
+    </ng-container>
+  
+    <ng-container matColumnDef="groupedHeader2">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" class="group-header"> סה"כ מאושפזים בני 75+ בבית החולים </th>
+    </ng-container>
+  
+    <ng-container matColumnDef="groupedHeader3">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" class="group-header"> סה"כ מאושפזים שעברו סיקור לדיליריום </th>
+    </ng-container>
+  
+    <ng-container matColumnDef="groupedHeader4">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" class="group-header"> סה"כ מאושפזים שאובחנו עם דליריום </th>
+    </ng-container>
+  
+    <ng-container matColumnDef="groupedHeader5">
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="2" class="group-header"> סה"כ מאושפזים שטופלו לדליריום </th>
+    </ng-container>
+  
+    <!-- Column Headers -->
+    <ng-container matColumnDef="ageGroup">
+      <th mat-header-cell *matHeaderCellDef> גיל / מין </th>
+      <td mat-cell *matCellDef="let row"> {{ row.ageGroup }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="totalMale">
+      <th mat-header-cell *matHeaderCellDef> זכר </th>
+      <td mat-cell *matCellDef="let row"> {{ row.totalMale }} </td>
+    </ng-container>
+    <ng-container matColumnDef="totalFemale">
+      <th mat-header-cell *matHeaderCellDef> נקבה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.totalFemale }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="screenedMale">
+      <th mat-header-cell *matHeaderCellDef> זכר </th>
+      <td mat-cell *matCellDef="let row"> {{ row.screenedMale }} </td>
+    </ng-container>
+    <ng-container matColumnDef="screenedFemale">
+      <th mat-header-cell *matHeaderCellDef> נקבה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.screenedFemale }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="deliriumMale">
+      <th mat-header-cell *matHeaderCellDef> זכר </th>
+      <td mat-cell *matCellDef="let row"> {{ row.deliriumMale }} </td>
+    </ng-container>
+    <ng-container matColumnDef="deliriumFemale">
+      <th mat-header-cell *matHeaderCellDef> נקבה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.deliriumFemale }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="treatedMale">
+      <th mat-header-cell *matHeaderCellDef> זכר </th>
+      <td mat-cell *matCellDef="let row"> {{ row.treatedMale }} </td>
+    </ng-container>
+    <ng-container matColumnDef="treatedFemale">
+      <th mat-header-cell *matHeaderCellDef> נקבה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.treatedFemale }} </td>
+    </ng-container>
+  
+    <!-- First header row: Grouped headers -->
+    <tr mat-header-row *matHeaderRowDef="['groupedHeader1', 'groupedHeader2', 'groupedHeader3', 'groupedHeader4', 'groupedHeader5']"></tr>
+  
+    <!-- Second header row: Actual column names -->
+    <tr mat-header-row *matHeaderRowDef="['ageGroup', 'totalMale', 'totalFemale', 'screenedMale', 'screenedFemale', 'deliriumMale', 'deliriumFemale', 'treatedMale', 'treatedFemale']"></tr>
+  
+    <!-- Data Rows -->
+    <tr mat-row *matRowDef="let row; columns: ['ageGroup', 'totalMale', 'totalFemale', 'screenedMale', 'screenedFemale', 'deliriumMale', 'deliriumFemale', 'treatedMale', 'treatedFemale']"></tr>
+  
+  </table>
+  
+  
+  
 
 </div>
