--- a/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
+++ b/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
@@ -45,7 +45,7 @@
       </table>
     </mat-card-content>
   </mat-card>
-  <h2 class="table-title">10. סיקור דליריום וטיפול בו לפי מין וגיל</h2>
+  <h2 class="table-title">2. משתתפים בתכנית למניעה, איתור וטיפול בדלריום, לפי מין וגיל</h2>
 
   <table mat-table [dataSource]="genderAgeSummary" class="mat-elevation-z8" dir="rtl">
   
