--- a/src/app/chameleon-reports/occupational-therapy/occupational-therapy.component.scss
+++ b/src/app/chameleon-reports/occupational-therapy/occupational-therapy.component.scss
@@ -637,3 +637,30 @@ ngx-gauge {
 .data-card-container {
   height: auto; /* Ensure dynamic height for container */
 }
+
+
+.summary-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid #ccc;
+  }
+  
+  .summary-card mat-card-content h3 {
+    font-size: 16px;
+    color: #444;
+    margin-bottom: 10px;
+  }
+  
+  .summary-card mat-card-content h1 {
+    font-size: 36px;
+    color: #2e7d32;
+    font-weight: bold;
+    margin: 0;
+  }
+  
