--- a/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
+++ b/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
@@ -254,21 +254,21 @@
     4. ייעוצים גריאטרים למאושפזים בני 75+ בבית החולים
   </h3>
   
-  <table mat-table class="mat-elevation-z8 summary-table">
+  <table class="mat-elevation-z8 summary-table " dir="rtl">
     <thead>
       <tr>
-        <th mat-header-cell *matHeaderCellDef> סה"כ מאושפזים 75+ בבית החולים שקיבלו ייעוץ גריאטרי </th>
-        <th mat-header-cell *matHeaderCellDef> סה"כ ייעוצים גריאטרים שניתנו </th>
-        <th mat-header-cell *matHeaderCellDef> כמות הייעוצים שבוצעו ע"י רופא/ה מומחה/ית בגריאטריה </th>
-        <th mat-header-cell *matHeaderCellDef> כמות הייעוצים שבוצעו ע"י אח/ות מומחה קליני בסיעוד גריאטרי </th>
+        <th>סה"כ מאושפזים 75+ בבית החולים שקיבלו ייעוץ גריאטרי</th>
+        <th>סה"כ ייעוצים גריאטרים שניתנו</th>
+        <th>כמות הייעוצים שבוצעו ע"י רופא/ה מומחה/ית בגריאטריה</th>
+        <th>כמות הייעוצים שבוצעו ע"י אח/ות מומחה קליני בסיעוד גריאטרי</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td mat-cell>{{ geriatricSummary?.UniquePatients || 0 }}</td>
-        <td mat-cell>{{ geriatricSummary?.TotalPatientDateRows || 0 }}</td>
-        <td mat-cell>{{ geriatricSummary?.TotalPatientDateRows || 0 }}</td>
-        <td mat-cell>0</td>
+        <td>{{ geriatricSummary?.UniquePatients || 0 }}</td>
+        <td>{{ geriatricSummary?.TotalPatientDateRows || 0 }}</td>
+        <td>{{ geriatricSummary?.TotalPatientDateRows || 0 }}</td>
+        <td>0</td>
       </tr>
     </tbody>
   </table>
