--- a/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
+++ b/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
@@ -1,13 +1,7 @@
 <app-spinner [isLoading]="isLoading"></app-spinner>
 
 <div *ngIf="!isLoading" class="body">
-  <mat-card class="filter-card" dir="rtl">
-    <mat-card-content class="filters">
-      <div class="filter-fields">
-        <h2>דו"ח דליריום - מטופלים 75+</h2>
-      </div>
-    </mat-card-content>
-  </mat-card>
+
   <mat-card class="filter-card" dir="rtl">
     <mat-card-content class="filters">
       <div class="filter-fields">
@@ -30,7 +24,7 @@
   
         <button mat-raised-button color="primary" (click)="applyFilter()">סנן</button>
   
-        <!-- <img src="../../assets/excel.png" alt="Download" (click)="exportAllTables()" class="download-icon icon" width="50px" style="margin-right: 10px;" /> -->
+        <img src="../../assets/excel.png" alt="Download" (click)="exportAllTables()" class="download-icon icon" width="50px" style="margin-right: 10px;" />
   
       </div>
     </mat-card-content>
